k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-namespace
  labels:
    name: ingress-node-nginx-namespace
