k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-node-ingress
  namespace: ingress-namespace

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: node-app-service
            port:
              number: 3333

      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
